--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -60,11 +60,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="128" id="IbL-jI-1SK" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="128"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="150" id="IbL-jI-1SK" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="150"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IbL-jI-1SK" id="yvP-eb-iZy">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f87-BQ-XkY">
@@ -83,25 +83,41 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TweetContents" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEB-VO-Ova">
-                                            <rect key="frame" x="73" y="25" width="286" height="92"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="TweetContents" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yEB-VO-Ova">
+                                            <rect key="frame" x="73" y="25" width="286" height="23"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="opD-v7-6p6" userLabel="favButton">
+                                            <rect key="frame" x="323" y="99" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="1RM-eG-fIH"/>
+                                                <constraint firstAttribute="height" constant="30" id="Jce-gP-0py"/>
+                                            </constraints>
+                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                            <state key="normal" image="favor-icon"/>
+                                            <connections>
+                                                <action selector="onFavTweet:" destination="IbL-jI-1SK" eventType="touchUpInside" id="Zv6-fx-gUj"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="yEB-VO-Ova" firstAttribute="trailing" secondItem="yvP-eb-iZy" secondAttribute="trailingMargin" id="2DA-BZ-CDY"/>
                                         <constraint firstItem="yEB-VO-Ova" firstAttribute="leading" secondItem="f87-BQ-XkY" secondAttribute="trailing" constant="8" id="2th-SM-FFU"/>
                                         <constraint firstItem="f87-BQ-XkY" firstAttribute="top" secondItem="yvP-eb-iZy" secondAttribute="top" id="3xx-oz-a4I"/>
                                         <constraint firstItem="ZWm-X5-glR" firstAttribute="top" secondItem="yvP-eb-iZy" secondAttribute="top" id="4a5-84-Qy3"/>
-                                        <constraint firstItem="yEB-VO-Ova" firstAttribute="bottom" secondItem="yvP-eb-iZy" secondAttribute="bottomMargin" id="PJ8-8e-7KC"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="opD-v7-6p6" secondAttribute="trailing" constant="6" id="Tjz-uN-DY0"/>
                                         <constraint firstItem="yEB-VO-Ova" firstAttribute="top" secondItem="ZWm-X5-glR" secondAttribute="bottom" constant="4" id="X9Z-hh-dtY"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="opD-v7-6p6" secondAttribute="trailing" constant="10" id="Xl2-aW-yPi"/>
+                                        <constraint firstItem="opD-v7-6p6" firstAttribute="top" secondItem="yEB-VO-Ova" secondAttribute="bottom" constant="10" id="cSV-TH-TE1"/>
                                         <constraint firstItem="f87-BQ-XkY" firstAttribute="leading" secondItem="yvP-eb-iZy" secondAttribute="leading" id="mcT-rw-1DO"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="opD-v7-6p6" secondAttribute="bottom" constant="10" id="qJi-Rj-XLO"/>
                                         <constraint firstItem="ZWm-X5-glR" firstAttribute="leading" secondItem="f87-BQ-XkY" secondAttribute="trailing" constant="8" id="tBl-ib-RoA"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="favButton" destination="opD-v7-6p6" id="ul6-U0-En1"/>
                                     <outlet property="profileImageView" destination="f87-BQ-XkY" id="YBB-Te-43m"/>
                                     <outlet property="tweetContentLabel" destination="yEB-VO-Ova" id="Bms-cU-BJu"/>
                                     <outlet property="userNameLabel" destination="ZWm-X5-glR" id="nVj-xD-BOl"/>
@@ -120,11 +136,64 @@
                                 <action selector="onLogout:" destination="pHM-Vp-WEg" id="F01-Vq-IX6"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="9G5-8t-8jf">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <segue destination="foU-9A-xiz" kind="presentation" id="tgc-PP-f9S"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fj3-9X-ghx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1496.8" y="59.820089955022496"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="7Zx-Pk-k3f">
+            <objects>
+                <viewController id="Zfp-2y-EGg" customClass="TweetViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j5W-Nh-MfH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Tweet here.." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="t9A-88-oXQ">
+                                <rect key="frame" x="0.0" y="56" width="375" height="116"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="XvZ-0f-0nX"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="t9A-88-oXQ" firstAttribute="leading" secondItem="XvZ-0f-0nX" secondAttribute="leading" id="7zy-U9-dbd"/>
+                            <constraint firstItem="t9A-88-oXQ" firstAttribute="top" secondItem="XvZ-0f-0nX" secondAttribute="top" id="EbQ-z2-aeL"/>
+                            <constraint firstItem="XvZ-0f-0nX" firstAttribute="trailing" secondItem="t9A-88-oXQ" secondAttribute="trailing" id="q8m-rP-ylc"/>
+                            <constraint firstItem="XvZ-0f-0nX" firstAttribute="bottom" secondItem="t9A-88-oXQ" secondAttribute="bottom" constant="475" id="s2n-8V-I6R"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="fBB-tB-a8P">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="djV-S5-vIz">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onCancel:" destination="Zfp-2y-EGg" id="jgh-YW-zEh"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="Xvl-Wf-xp1">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="onTweet:" destination="Zfp-2y-EGg" id="w0A-ZX-HKD"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tweetTextView" destination="t9A-88-oXQ" id="fpG-9F-xkf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w9m-vv-vaW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3240.8000000000002" y="74.212893553223395"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KSR-u4-8Y1">
@@ -152,8 +221,31 @@
             </objects>
             <point key="canvasLocation" x="625" y="60"/>
         </scene>
+        <!--Tweet Navigation Controller-->
+        <scene sceneID="Tq9-M2-CH7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="foU-9A-xiz" userLabel="Tweet Navigation Controller" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eEU-rQ-l4f">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.090526660839999995" green="0.92150933209999997" blue="0.93438592659999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Zfp-2y-EGg" kind="relationship" relationship="rootViewController" id="2H9-2q-XHq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fw6-UW-AjG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2301.5999999999999" y="74.212893553223395"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="favor-icon" width="30" height="30"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
